Add HTML files for Dev and Test environments with form handling logic
- Created index-dev.html for the development environment with form submission handling, including progress, success, and error dialogs.
- Created index-test.html for the testing environment with similar form handling logic, tailored for the test API endpoints.
- Implemented unified messages for user feedback during form submission.
- Added event listeners for form lifecycle events and integrated the FormLoader script.

--- a/index-dev.html
+++ b/index-dev.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Application</title>
+    <title>Form Application - Dev Environment</title>
     <style>
       /* Dialog Styles */
       #form-dialog {
@@ -191,9 +191,30 @@
         margin: 0 auto;
         padding: 20px;
       }
+
+      /* Dev Environment Header */
+      .dev-header {
+        background: #16a34a;
+        color: white;
+        padding: 20px 0;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      .dev-header h1 {
+        font-size: 28px;
+        font-weight: bold;
+        margin: 0;
+      }
     </style>
   </head>
   <body>
+    <header class="dev-header">
+      <div style="max-width: 1200px; margin: 0 auto;">
+        <h1>Dev Environment</h1>
+      </div>
+    </header>
+    
     <div class="form-container">
       <div
         id="form-wrapper"
