refactor(app): remove header sections from Dev and Test environment HTML files

--- a/index-test.html
+++ b/index-test.html
@@ -191,30 +191,9 @@
         margin: 0 auto;
         padding: 20px;
       }
-
-      /* Test Environment Header */
-      .test-header {
-        background: #ea580c;
-        color: white;
-        padding: 20px 0;
-        margin-bottom: 20px;
-        text-align: center;
-      }
-
-      .test-header h1 {
-        font-size: 28px;
-        font-weight: bold;
-        margin: 0;
-      }
     </style>
   </head>
   <body>
-    <header class="test-header">
-      <div style="max-width: 1200px; margin: 0 auto;">
-        <h1>Test Environment</h1>
-      </div>
-    </header>
-    
     <div class="form-container">
       <div
         id="form-wrapper"
@@ -230,8 +209,7 @@
         formId: "d3630a02-b871-f011-b4cc-6045bd019ae9",
         orgId: "22995153-1e26-409d-a380-d58e92c7e210",
         baseUrl: "https://public-usa.mkt.dynamics.com/api/v1.0",
-        successRedirectUrl:
-          "https://client-connect-test.powerappsportals.com/",
+        successRedirectUrl: "https://client-connect-test.powerappsportals.com/",
       };
 
       // Unified messages object containing all dialog messages
