feat(app): add custom validation for email field in form handling
- Implemented custom validation for email input fields in both Dev and Test environments.
- Ensured that invalid email entries prompt a user-friendly message.

This change enhances user experience by providing immediate feedback on email input validity.

--- a/index-dev.html
+++ b/index-dev.html
@@ -663,6 +663,15 @@
 
       document.addEventListener("d365mkt-afterformload", function () {
         console.log("d365mkt-afterformload");
+        // Add custom validation to email field
+        const emailField = document.querySelector('input[type="email"]');
+        if (emailField) {
+          emailField.setAttribute(
+            "oninvalid",
+            "setCustomValidity('Please enter valid email address.')",
+          );
+          emailField.setAttribute("oninput", "setCustomValidity('')");
+        }
       });
 
       document.addEventListener("d365mkt-formrender", function () {
