--- a/index-test.html
+++ b/index-test.html
@@ -42,10 +42,7 @@
         font-size: 20px;
         font-weight: 600;
         margin-bottom: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 12px;
+        text-align: center;
       }
 
       .dialog-title-large {
@@ -153,12 +150,14 @@
       }
 
       .spinner {
-        width: 24px;
-        height: 24px;
+        width: 32px;
+        height: 32px;
         border: 3px solid #f3f3f3;
         border-top: 3px solid #3b82f6;
         border-radius: 50%;
         animation: spin 1s linear infinite;
+        margin: 0 auto;
+        display: block;
       }
 
       @keyframes spin {
@@ -454,7 +453,7 @@
         const titleHtml = config.title
           ? `<${config.titleTag || "div"} class="${
               config.titleClass || "dialog-title"
-            }">${iconHtml}${config.title}</${config.titleTag || "div"}>`
+            }">${config.title}</${config.titleTag || "div"}>`
           : "";
         const messageHtml = config.message
           ? `<p class="${config.messageClass || "dialog-message"}">${
@@ -466,7 +465,7 @@
 
         const content = `${
           config.dialogClass ? `<div class="${config.dialogClass}">` : ""
-        }${titleHtml}${messageHtml}${detailsHtml}${buttonsHtml}${
+        }${iconHtml}${titleHtml}${messageHtml}${detailsHtml}${buttonsHtml}${
           config.dialogClass ? "</div>" : ""
         }`;
 
