--- a/index-dev.html
+++ b/index-dev.html
@@ -251,7 +251,7 @@
         baseUrl: "https://public-usa.mkt.dynamics.com/api/v1.0",
         successRedirectUrl:
           "https://client-connect-core.powerappsportals.com/SignIn",
-        contactSupportUrl: "https://www.acesaba.com/contact",
+        applicationReviewUrl: "https://www.acesaba.com",
       };
 
       // Unified messages object containing all dialog messages
@@ -638,7 +638,7 @@
           buttons: [
             {
               text: "OK",
-              onclick: "document.getElementById('form-dialog').remove()",
+              onclick: `window.location.href='${formConfig.applicationReviewUrl}'`,
               className: "dialog-button-success",
             },
           ],
