Revert "feat(application-review): update application review URL and button action"
This reverts commit 05f6ec37c1e36a661b010c3164bdcf4e2005f784.

--- a/index-dev.html
+++ b/index-dev.html
@@ -251,7 +251,7 @@
         baseUrl: "https://public-usa.mkt.dynamics.com/api/v1.0",
         successRedirectUrl:
           "https://client-connect-core.powerappsportals.com/SignIn",
-        applicationReviewUrl: "https://www.acesaba.com",
+        contactSupportUrl: "https://www.acesaba.com/contact",
       };
 
       // Unified messages object containing all dialog messages
@@ -638,7 +638,7 @@
           buttons: [
             {
               text: "OK",
-              onclick: `window.location.href='${formConfig.applicationReviewUrl}'`,
+              onclick: "document.getElementById('form-dialog').remove()",
               className: "dialog-button-success",
             },
           ],
