fix: update caregiver relationship lookup key in forms
Updated the key for the caregiver relationship lookup field to ensure proper data retrieval in the form processing logic across multiple files.

--- a/index-dev.html
+++ b/index-dev.html
@@ -428,7 +428,8 @@
           )?.textContent;
 
           const relationshipLookupField = payload.fields.find(
-            (item) => item.key === "aces_relationshiplookuptext",
+            (item) =>
+              item.key === "aces_startherecaregiverrelationshiplookuptext",
           );
           if (relationshipLookupField) {
             relationshipLookupField.value = caregiverRelationship;
