--- a/index-test.html
+++ b/index-test.html
@@ -688,6 +688,9 @@
         });
       };
 
+      // Global variable to store email for lead ID tracking
+      let formEmail = null;
+
       // Handle form submission with complete processing logic
       const submitFormHandler = async (payload) => {
         // Show confirmation dialog
@@ -700,6 +703,19 @@
 
         // Show progress dialog
         showProgressDialog();
+
+        // Update msdyncrm_leadid field with email value
+        if (formEmail) {
+          const leadIdInput = document.querySelector(`input[name='msdyncrm_leadid']`);
+          if (leadIdInput) {
+            leadIdInput.value = formEmail;
+            // Also update in payload if field exists
+            const leadIdField = payload.fields.find(field => field.key === 'msdyncrm_leadid');
+            if (leadIdField) {
+              leadIdField.value = formEmail;
+            }
+          }
+        }
 
         // Process form fields using extracted functions
         processPayorField(payload);
@@ -762,6 +778,12 @@
       document.addEventListener("d365mkt-beforeformload", function () {});
 
       document.addEventListener("d365mkt-afterformload", function () {
+        // Capture email field value for lead ID tracking
+        const emailInput = document.querySelector(`input[name='emailaddress1']`);
+        if (emailInput) {
+          formEmail = emailInput.value;
+        }
+        
         // Add custom validation to email field
         const emailField = document.querySelector('input[type="email"]');
         if (emailField) {
