fix(phone-validation): exclude specific phone field from initialization

--- a/index-test.html
+++ b/index-test.html
@@ -796,7 +796,7 @@
 
         // Initialize intl-tel-input for phone fields with country flags
         const initializePhoneFields = () => {
-          const phoneFields = document.querySelectorAll('input[type="tel"]');
+          const phoneFields = document.querySelectorAll('input[type="tel"]:not([name="address2_telephone1"])');
 
           phoneFields.forEach((phoneField) => {
             // Skip if already initialized
