--- a/index-test.html
+++ b/index-test.html
@@ -877,8 +877,8 @@
                 formatOnDisplay: true,
                 separateDialCode: true,
                 nationalMode: true,
-                autoPlaceholder: "aggressive",
-                placeholderNumberType: "MOBILE",
+                autoPlaceholder: "off",
+                customPlaceholder: "Enter Phone",
                 showFlags: true,
                 allowDropdown: false,
                 dropdownContainer: document.body,
