feat(dialog): implement message update prevention for gateway timeouts
- Added a global variable to track whether message updates should be prevented during gateway timeouts.
- Updated dialog functions to respect this flag, ensuring no further message updates occur after a timeout.
- Adjusted error handling to wait for a minimum display time for server errors and timeouts.

This change improves user experience by preventing misleading messages during prolonged server issues.

--- a/index-test.html
+++ b/index-test.html
@@ -567,7 +567,11 @@
       };
 
       // Optimized dialog functions using shared utilities
+      // Global variable to track if we should prevent message updates (for gateway timeouts)
+      let preventMessageUpdates = false;
+
       const showProgressDialog = () => {
+        preventMessageUpdates = false; // Reset the flag
         showDialog({
           title: messages.progress.title,
           message: messages.progress.message,
@@ -578,7 +582,7 @@
         // Show delayed message after 25 seconds
         setTimeout(() => {
           const existingDialog = document.getElementById("form-dialog");
-          if (existingDialog) {
+          if (existingDialog && !preventMessageUpdates) {
             const messageElement = existingDialog.querySelector('.dialog-message');
             if (messageElement) {
               messageElement.innerHTML = `
@@ -801,6 +805,21 @@
               // All 400 errors show success-style dialog but no redirect
               showApplicationReviewMessage();
             } else if (result.status === 500 || result.status === 504) {
+              // For gateway timeouts, prevent further message updates after 25 seconds
+              if (result.status === 504) {
+                preventMessageUpdates = true;
+              }
+
+              // For server errors and gateway timeouts, wait at least 25 seconds to match progress dialog timing
+              const minDisplayTime = 25000;
+              const startTime = Date.now();
+              const elapsed = Date.now() - startTime;
+              const remainingTime = Math.max(0, minDisplayTime - elapsed);
+
+              if (remainingTime > 0) {
+                await new Promise((resolve) => setTimeout(resolve, remainingTime));
+              }
+
               // Handle server errors (500) and gateway timeouts (504)
               if (result.data && result.data.Message) {
                 showErrorMessage("server_error", result.data);
@@ -809,15 +828,17 @@
                 showErrorMessage("server_error");
               }
             } else {
-              // Fallback for other errors
+              // For other errors, wait at least 3 seconds
+              await new Promise((resolve) => setTimeout(resolve, 3000));
               showErrorMessage("unknown_error");
             }
           }
         } catch (error) {
           console.error("Unexpected error during form submission:", error);
 
-          // Wait for at least 3 seconds before showing error
-          await new Promise((resolve) => setTimeout(resolve, 3000));
+          // Wait for at least 25 seconds to match progress dialog timing
+          const minDisplayTime = 25000;
+          await new Promise((resolve) => setTimeout(resolve, minDisplayTime));
 
           // Show error dialog instead of redirecting
           showErrorMessage("unexpected_error");
