feat(dialog): add delayed processing message for better user feedback
- Introduced a new 'delayed' message in the dialog to inform users about longer processing times.
- Updated dialog display logic to utilize the new message format.
- Enhanced button styling for improved user interaction.

This change aims to enhance user experience by providing clearer feedback during extended processing periods.

--- a/index-dev.html
+++ b/index-dev.html
@@ -261,6 +261,11 @@
           message:
             "Please wait while we verify your information. This may take a few moments.",
         },
+        delayed: {
+          title: "Hang tight!",
+          message:
+            "This is taking a bit longer than usual. You might find an update waiting in your email.</em>",
+        },
         success: {
           title: "Success!",
           message:
@@ -519,7 +524,7 @@
                 btn.onclick ? `onclick="${btn.onclick}"` : ""
               } class="dialog-button ${
                 btn.className || "dialog-button-primary"
-              }">${btn.text}</button>`,
+              }" ${btn.style ? `style="${btn.style}"` : ""}>${btn.text}</button>`,
           )
           .join("");
 
@@ -584,15 +589,21 @@
         setTimeout(() => {
           const existingDialog = document.getElementById("form-dialog");
           if (existingDialog && !preventMessageUpdates) {
-            const messageElement = existingDialog.querySelector('.dialog-message');
-            if (messageElement) {
-              messageElement.innerHTML = `
-                ${messages.progress.message}<br><br>
-                <em style="color: #6b7280; font-size: 14px;">
-                  Hang tight! This is taking a bit longer than usual. You might find an update waiting in your email.
-                </em>
-              `;
-            }
+            // Use showDialog function to properly update the dialog
+            showDialog({
+              title: messages.delayed.title,
+              message: messages.delayed.message,
+              icon: "spinner",
+              hideCloseButton: true,
+              buttons: [
+                {
+                  text: "Continue Anyway",
+                  onclick: "document.getElementById('form-dialog').remove()",
+                  className: "dialog-button-secondary",
+                  style: "margin-top: 12px; padding: 8px 16px; font-size: 14px;"
+                }
+              ]
+            });
           }
         }, 25000);
       };
