--- a/index-stage.html
+++ b/index-stage.html
@@ -315,6 +315,10 @@
       const formFetch = async (payload) => {
         const url = `${formConfig.baseUrl}/orgs/${formConfig.orgId}/landingpageforms/forms/${formConfig.formId}`;
 
+        // Create AbortController for 30-second timeout
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 30000);
+
         const requestOptions = {
           headers: {
             accept: "application/json",
@@ -325,10 +329,12 @@
           method: "POST",
           mode: "cors",
           credentials: "omit",
+          signal: controller.signal,
         };
 
         try {
           const response = await fetch(url, requestOptions);
+          clearTimeout(timeoutId);
 
           if (response.ok) {
             return {
@@ -385,6 +391,16 @@
             statusText: response.statusText,
           };
         } catch (error) {
+          clearTimeout(timeoutId);
+
+          if (error.name === 'AbortError') {
+            return {
+              success: false,
+              error: "timeout_error",
+              message: "Request timed out after 30 seconds",
+            };
+          }
+
           return {
             success: false,
             error: "network_error",
@@ -795,8 +811,8 @@
             if (result.status === 400) {
               // All 400 errors show success-style dialog but no redirect
               showApplicationReviewMessage();
-            } else if (result.status === 500 || result.status === 504) {
-              // For 500 and 504 errors, show delayed message with success styling
+            } else if (result.status === 500 || result.status === 504 || result.error === "timeout_error") {
+              // For 500, 504 errors, and timeouts, show delayed message with success styling
               showDialog({
                 dialogClass: "success-dialog",
                 title: messages.delayed.title,
