feat(dialog): update delayed message title and content for better user experience

--- a/index-dev.html
+++ b/index-dev.html
@@ -264,7 +264,7 @@
         delayed: {
           title: "Hang tight!",
           message:
-            "This is taking a bit longer than usual. You might find an update waiting in your email.</em>",
+            "This is taking a bit longer than usual. You might find an update waiting in your email.",
         },
         success: {
           title: "Success!",
